# TS-Optimizer

./: .gitignore  .prettierignore  .prettierrc.json  BENCHMARKS.md  CLAUDE.md  package.json  pnpm-lock.yaml
.ci/: baseline.json
oxc/: Cargo.toml  (+3 more)
oxc/optimizer/: Cargo.toml
oxc/optimizer/src/: dead_code.rs  entry_strategy.rs  error.rs  illegal_code.rs  import_clean_up.rs  js_lib_interface.rs  lib.rs  macros.rs  processing_failure.rs  ref_counter.rs  segment.rs  source.rs  transform.rs
oxc/optimizer/src/component/: component.rs  id.rs  language.rs  mod.rs  qrl.rs  shared.rs  source_info.rs
oxc/optimizer/src/ext/: ast_builder_ext.rs  expression_ext.rs  mod.rs
oxc/optimizer/src/snapshots/: qwik_optimizer__js_lib_interface__tests__example_1.snap  qwik_optimizer__js_lib_interface__tests__example_11.snap  qwik_optimizer__js_lib_interface__tests__example_2.snap  qwik_optimizer__js_lib_interface__tests__example_3.snap  (+17 more)
rust-impl/: Cargo.toml
rust-impl/src/: lib.rs
rust-impl/src/hashing/: mod.rs  naming.rs  siphash.rs
rust-impl/src/optimizer/: bind_transform.rs  capture_analysis.rs  const_replacement.rs  context_stack.rs  dev_mode.rs  diagnostics.rs  entry_strategy.rs  event_handler_transform.rs  extract.rs  jsx_transform.rs  key_prefix.rs  loop_hoisting.rs  marker_detection.rs  mod.rs  rewrite_calls.rs  rewrite_imports.rs  rewrite_parent.rs  segment_codegen.rs  signal_analysis.rs  strip_ctx.rs  strip_exports.rs  transform.rs  types.rs  variable_migration.rs
rust-impl/src/testing/: batch_runner.rs  mod.rs  snapshot_parser.rs
rust-impl/tests/: snapshot_tests.rs
(+200 files in other folders)
