[package]
name = "qwik-optimizer"
version = "0.1.0"
edition = "2024"

[lib]
name = "qwik_optimizer"
path = "src/lib.rs"

[dependencies]
oxc_parser = "0.72"
oxc_ast = "0.72"
oxc_span = "0.72"
oxc_allocator = "0.72"
oxc_syntax = "0.72"
oxc_diagnostics = "0.72"
siphasher = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
