[package]
name = "qwik-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
base64 = "0.22.1"
oxc_index = "4.1.0"
oxc_parser = "0.94.0"
oxc_ast = "0.94.0"
oxc_codegen = "0.94.0"
oxc_allocator = "0.94.0"
oxc_semantic = "0.94.0"
oxc_span = "0.94.0"
oxc_traverse = "0.94.0"
oxc_minifier = "0.94.0"
oxc_ast_visit = "0.94.0"
oxc_syntax = "0.94.0"
oxc_transformer = "0.94.0"
oxc-browserslist = "2.1.2" # needed to avoid version mismatch in build
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2.1"

[dev-dependencies]
glob = "0.3.2"
insta = { version = "1.42.1", features = ["yaml"] }
#biome_js_formatter = "0.5.7"
